[package]
name = "bevy_ghx_utils"
version = "0.1.0"
description = "Simple shared bevy utilities"
repository = "https://github.com/Henauxg/bevy_ghx_utils"
documentation = "https://docs.rs/bevy_ghx_utils"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]
readme = "README.md"


[features]
default = ["pan-orbit-camera"]
# A 3d pan orbit camera
pan-orbit-camera = [
    "bevy/bevy_render", # Rendering framework core
]

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [] }
